--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.0"
 group = "com.vandendaelen.k9" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "K9"
+archivesBaseName = "k9"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
