--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,9 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+
+# IC2 experimental
+ic2ex_version = 2.8.98-ex112
+
+#tardis
+tardis_version = 0.0.8-dev
