--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ jar {
     }
 }
 
-version = "k9-1.12.2-1.2.1.2"
+version = "1.12.2-1.3.1.2"
 group = "com.vandendaelen.k9" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "k9"
 
