--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@ org.gradle.jvmargs=-Xmx3G
 ic2ex_version = 2.8.98-ex112
 
 #tardis
-tardis_version = 0.0.8.12.01.2019
+tardis_version = 0.1.0E_Hotfix
